--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "qlocktwo",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -38,5 +38,10 @@
 		"vite": "^7.1.10",
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
-	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
+	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
+	"dependencies": {
+		"@fontsource-variable/kode-mono": "^5.2.8",
+		"@fontsource/allerta-stencil": "^5.2.8",
+		"@fortawesome/fontawesome-free": "^7.1.0"
+	}
 }
