--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
 	},
 	"packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
 	"dependencies": {
-		"@fontsource-variable/kode-mono": "^5.2.8",
 		"@fontsource/allerta-stencil": "^5.2.8",
+		"@fontsource/kode-mono": "^5.2.8",
 		"@fortawesome/fontawesome-free": "^7.1.0"
 	}
 }
