Add SvelteKit PWA support and adjust configurations for manifest handling

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,18 +8,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v6
         with:
-          node-version-file: .nvmrc
+          node-version: lts/Krypton
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
       - run: pnpm install
       - run: echo "PUBLIC_BUILD_SHA=$(git rev-parse --short HEAD)" | tee -a $GITHUB_ENV
       - run: pnpm build
         env:
-          BASE_PATH: '/${{ github.event.repository.name }}'
+          REPO_NAME: ${{ github.event.repository.name }}
       - uses: actions/upload-pages-artifact@v4
         with:
           path: build
